--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -522,8 +522,7 @@
     padding: 10px;
 }
 
-.admin-icon {
-    color: gold;
+.admin-icon-position {
     padding-right: 5px;
     padding-top: 3px;
 }
