--- a/src/styles.scss
+++ b/src/styles.scss
@@ -589,3 +589,11 @@ input:disabled, textarea:disabled, select:disabled {
 .mat-table {
     box-shadow: none!important;
 }
+
+.admin-icon {
+    color: gold;
+}
+
+.mat-header-cell {
+    font-size: 16px;
+}
