--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -479,6 +479,27 @@
     border-radius: 0 30px 0 30px;
 }
 
+.shine-effect {
+    overflow: hidden;
+}
+
+.shine-effect:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -300px;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.3);
+    transform: skewX(-30deg);
+    transition: 0.5s;
+} 
+  
+.shine-effect:hover:before {
+    left: 250px;
+    background: rgba(255, 255, 255, 0.2);
+}
+
 .version:hover {
     opacity: 0.9;
     cursor: pointer;
