--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,8 +5,8 @@
         <div class="row title-row mb-5">
           <div class="col-12 flex-center">
               <div class="app-title has-text-primary">
-                  <h1 class="title-header"> TaskFlow </h1> 
-                  <i class="fa-solid fa-tree app-logo"></i>
+                  <h1 class="title-header"> TaskFlow </h1>
+                  <i class="fa-solid fa-tree app-logo flip"></i>
               </div>
           </div>
         </div>
