--- a/src/styles.scss
+++ b/src/styles.scss
@@ -303,7 +303,7 @@ input:disabled, textarea:disabled, select:disabled {
         label, input,
         ::placeholder,
         .mat-option-text,
-        .mat-tab-label-content {
+        .mdc-tab__text-label {
             color: var(--text-dark)!important;
         }
     }
